# agent-orchestration

./: README.md  pyproject.toml
.specify/memory/: constitution.md
features/001-core-orchestration/: plan.md  spec.md  tasks.md
src/agent_orchestration/: __init__.py  agent_runner.py  browser_fleet.py  coordinator.py  secrets.py  server.py
tests/: test_agent_runner.py  test_browser_fleet.py  test_coordinator.py  test_integration.py  test_secrets.py  test_server.py
