[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestration"
version = "0.1.0"
description = "Standards-based multi-agent orchestration with A2A protocol, isolated browsers, and consolidated secrets"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
